--- a/index.html
+++ b/index.html
@@ -4,28 +4,34 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>LensKit Recommender Toolkit</title>
+<link rel="icon" type="image/png" href="/r/lenskit-mini.png">
 <link rel="stylesheet" href="/r/master.css" />
 <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
 <header class="row">
-  <div class="large-12 columns">
-    <h1>LensKit</h1>
+  <div class="large-12 columns logo">
+    <img src="/r/logo.png" alt="LensKit">
+    <p>Open-Source Tools for Recommender Systems
   </div>
 </header>
 <div class="row">
-  <div class="medium-6 large-4 columns use-case">
+  <div class="medium-6 large-5 large-offset-1 columns use-case">
     <div class="uc-header">
-      <img src="/r/building.svg">
+      <img class='uc-logo' src="/r/building.svg">
       <h2>Build</h2>
+      <p>Use LensKit to build your next recommender application.
     </div>
   </div>
-  <div class="medium-6 large-4 columns use-case">
+  <div class="medium-6 large-5 columns use-case end">
     <div class="uc-header">
-      <img src="/r/science.svg">
+      <img class='uc-logo' src="/r/science.svg">
       <h2>Research</h2>
+      <p>Use LensKit to research recommender algorithms, evaluation techniques, or user experience.
     </div>
   </div>
+</div>
+<div class="row">
   <div class="large-4 columns twitterbox">
     <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/LensKitRS" data-widget-id="285782633399599104">Tweets by @LensKitRS</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
