--- a/index.html
+++ b/index.html
@@ -32,13 +32,30 @@
   </div>
 </div>
 <div class="row">
-  <div class="large-4 columns twitterbox">
+  <div class="medium-6 large-5 large-offset-1 columns project-info">
+    <h2>Download LensKit</h2>
+    <ul class='highlights'>
+      <li>Latest version: 2.0.5
+      <li>Latest prelease: 2.1-M4
+      <li><a href="http://search.maven.org/#artifactdetails|org.grouplens.lenskit|lenskit-all|2.1-M4|jar">Get from Maven Central</a>
+      <li><a href="https://github.com/grouplens/lenskit">Get the source on GitHub</a>
+    </ul>
+    <div class="read-more"><a href="download.html">More download information &rightarrow;</a></div>
+    <h2>Connect with LensKit</h2>
+    <ul class='highlights'>
+      <li>Join our <a href="#">mailing list</a>
+      <li>Report and discuss <a href="https://github.com/grouplens/lenskit/issues">issues on GitHub</a>
+      <li><a href="https://twitter.com/intent/user?screen_name=LensKitRS">Follow LensKit on Twitter</a>
+    </ul>
+  </div>
+  <div class="show-for-large-up large-1 columns">&nbsp;</div>
+  <div class="medium-6 large-4 columns twitterbox end">
     <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/LensKitRS" data-widget-id="285782633399599104">Tweets by @LensKitRS</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </div>
 </div>
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/bower_components/foundation/js/foundation.min.js"></script>
 <script src="/r/app.js"></script>
+<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
 </body>
 </html>
