--- a/index.html
+++ b/index.html
@@ -33,20 +33,24 @@
 </div>
 <div class="row">
   <div class="medium-6 large-5 large-offset-1 columns project-info">
-    <h2>Download LensKit</h2>
-    <ul class='highlights'>
-      <li>Latest version: 2.0.5
-      <li>Latest prelease: 2.1-M4
-      <li><a href="http://search.maven.org/#artifactdetails|org.grouplens.lenskit|lenskit-all|2.1-M4|jar">Get from Maven Central</a>
-      <li><a href="https://github.com/grouplens/lenskit">Get the source on GitHub</a>
-    </ul>
-    <div class="read-more"><a href="download.html">More download information &rightarrow;</a></div>
-    <h2>Connect with LensKit</h2>
-    <ul class='highlights'>
-      <li>Join our <a href="#">mailing list</a>
-      <li>Report and discuss <a href="https://github.com/grouplens/lenskit/issues">issues on GitHub</a>
-      <li><a href="https://twitter.com/intent/user?screen_name=LensKitRS">Follow LensKit on Twitter</a>
-    </ul>
+    <section>
+      <h2>Download LensKit</h2>
+      <ul class='highlights'>
+        <li>Latest version: 2.0.5
+        <li>Latest prelease: 2.1-M4
+        <li><a href="http://search.maven.org/#artifactdetails|org.grouplens.lenskit|lenskit-all|2.1-M4|jar">Get from Maven Central</a>
+        <li><a href="https://github.com/grouplens/lenskit">Get the source on GitHub</a>
+      </ul>
+      <div class="read-more"><a href="download.html">More download information &rightarrow;</a></div>
+    </section>
+    <section>
+      <h2>Connect with LensKit</h2>
+      <ul class='highlights'>
+        <li>Join our <a href="#">mailing list</a>
+        <li>Report and discuss <a href="https://github.com/grouplens/lenskit/issues">issues on GitHub</a>
+        <li><a href="https://twitter.com/intent/user?screen_name=LensKitRS">Follow LensKit on Twitter</a>
+      </ul>
+    </section>
   </div>
   <div class="show-for-large-up large-1 columns">&nbsp;</div>
   <div class="medium-6 large-4 columns twitterbox end">
