--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
+<div class="fixed">
+  <nav class="top-bar">
+    <ul class="title-area">
+      <li class="name"><h1><a href="#">LensKit</a></h1>
+    </ul>
+    <section class="top-bar-section">
+      <ul class="right">
+        <li><a href="/download.html">News</a>
+        <li><a href="/download.html">Download</a>
+        <li><a href="/download.html">Documentation</a>
+        <li><a href="/download.html">Research</a>
+      </ul>
+    </section>
+  </nav>
+</div>
 <header class="row">
   <div class="large-12 columns logo">
     <img src="/r/logo.png" alt="LensKit">
@@ -42,6 +57,13 @@
         <li><a href="https://github.com/grouplens/lenskit">Get the source on GitHub</a>
       </ul>
       <div class="read-more"><a href="download.html">More download information &rightarrow;</a></div>
+    </section>
+    <section>
+      <h2>Learn about LensKit</h2>
+      <ul class='highlights'>
+        <li><a href="http://www.youtube.com/watch?v=ug_JfORWK7w">Watch the video</a>
+        <li><a href="download.html">Read the documentation</a>
+      </ul>
     </section>
     <section>
       <h2>Connect with LensKit</h2>
