--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>LensKit Recommender Toolkit</title>
-<link rel="icon" type="image/png" href="/r/lenskit-mini.png">
-<link rel="stylesheet" href="/r/master.css" />
+<link rel="icon" type="image/png" href="/s/lenskit-mini.png">
+<link rel="stylesheet" href="/s/master.css" />
 <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
@@ -26,21 +26,21 @@
 </div>
 <header class="row">
   <div class="large-12 columns logo">
-    <img src="/r/logo.png" alt="LensKit">
+    <img src="/s/logo.png" alt="LensKit">
     <p>Open-Source Tools for Recommender Systems
   </div>
 </header>
 <div class="row">
   <div class="medium-6 large-5 large-offset-1 columns use-case">
     <div class="uc-header">
-      <img class='uc-logo' src="/r/building.svg">
+      <img class='uc-logo' src="/s/building.svg">
       <h2>Build</h2>
       <p>Use LensKit to build your next recommender application.
     </div>
   </div>
   <div class="medium-6 large-5 columns use-case end">
     <div class="uc-header">
-      <img class='uc-logo' src="/r/science.svg">
+      <img class='uc-logo' src="/s/science.svg">
       <h2>Research</h2>
       <p>Use LensKit to research recommender algorithms, evaluation techniques, or user experience.
     </div>
@@ -81,7 +81,7 @@
 </div>
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/bower_components/foundation/js/foundation.min.js"></script>
-<script src="/r/app.js"></script>
+<script src="/s/app.js"></script>
 <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
 </body>
 </html>
