add font packages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <title>LensKit Recommender Toolkit</title>
 <link rel="icon" type="image/png" href="/s/lenskit-mini.png">
 <link rel="stylesheet" href="/s/master.css" />
+<link rel="stylesheet" href="/s/fonts/liberation/stylesheet.css" />
+<link rel="stylesheet" href="/s/fonts/pt-sans/stylesheet.css" />
+<link rel="stylesheet" href="/s/fonts/inconsolata/stylesheet.css" />
 <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
