add common shell

--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
 ---
-title: Home
-layout: none
+fullTitle: LensKit Recommender Toolkit
+scripts:
+- //platform.twitter.com/widgets.js
+layout: shell
 header:
   title: hide
 ---
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>LensKit Recommender Toolkit</title>
-<link rel="icon" type="image/png" href="/s/lenskit-mini.png">
-<link rel="stylesheet" href="/s/master.css" />
-<link rel="stylesheet" href="/s/fonts/liberation/stylesheet.css" />
-<link rel="stylesheet" href="/s/fonts/pt-sans/stylesheet.css" />
-<link rel="stylesheet" href="/s/fonts/inconsolata/stylesheet.css" />
-<script src="bower_components/modernizr/modernizr.js"></script>
-</head>
-<body>
-<div class="fixed">
-  {% include menu.html %}
-</div>
 <header class="row">
   <div class="large-12 columns logo">
     <img src="/s/logo.png" alt="LensKit">
@@ -76,9 +61,3 @@ header:
     <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/LensKitRS" data-widget-id="285782633399599104">Tweets by @LensKitRS</a>
   </div>
 </div>
-<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/foundation/js/foundation.min.js"></script>
-<script src="/s/app.js"></script>
-<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
-</body>
-</html>
