--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ header:
   </div>
 </header>
 <div class="row">
-  <div class="medium-6 large-5 large-offset-1 columns use-case">
+  <div class="medium-6 columns use-case">
     <div class="uc-header">
       <img class='uc-logo' src="/s/building.svg">
       <h2>Build</h2>
       <p>Use LensKit to build your next recommender application.
     </div>
   </div>
-  <div class="medium-6 large-5 columns use-case end">
+  <div class="medium-6 columns use-case">
     <div class="uc-header">
       <img class='uc-logo' src="/s/science.svg">
       <h2>Research</h2>
@@ -29,7 +29,7 @@ header:
   </div>
 </div>
 <div class="row">
-  <div class="medium-6 large-5 large-offset-1 columns project-info">
+  <div class="medium-6 columns project-info">
     <section>
       <h2>Download LensKit</h2>
       <ul class='highlights'>
@@ -57,7 +57,13 @@ header:
     </section>
   </div>
   <div class="show-for-large-up large-1 columns">&nbsp;</div>
-  <div class="medium-6 large-4 columns twitterbox end">
+  <div class="medium-6 large-5 columns twitterbox">
     <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/LensKitRS" data-widget-id="285782633399599104">Tweets by @LensKitRS</a>
   </div>
+</div>
+<div class="row">
+  <section class="small-12 columns">
+    <h2 class="subheader">Acknowledgements</h2>
+    {% include thanks.html %}
+  </section>
 </div>
