work on bringing in documentation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ header:
   <div class="large-12 columns logo">
     <img src="/s/logo.png" alt="LensKit">
     <p>Open-Source Tools for Recommender Systems
+    <p style="font-style: italic;"><strong>Note:</strong> This is not yet the official LensKit web site; you probably want to visit the <a href="http://lenskit.grouplens.org">official site</a>.</p>
   </div>
 </header>
 <div class="row">
