more release automation

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@ header:
     <section>
       <h2>Download LensKit</h2>
       <ul class='highlights'>
-        <li>Latest version: 2.0.5
-        <li>Latest prelease: 2.1-M4
+        <li>Latest version: <a href="/releases/lenskit-{{site.lenskit.version}}.html">{{site.lenskit.version}}</a>
+        {% if site.lenskit.prerelease %}
+        <li>Latest prelease: <a href="/releases/lenskit-{{site.lenskit.next}}.html">{{site.lenskit.prerelease}}</a>
+        {% endif %}
         <li><a href="http://search.maven.org/#artifactdetails|org.grouplens.lenskit|lenskit-all|2.1-M4|jar">Get from Maven Central</a>
         <li><a href="https://github.com/grouplens/lenskit">Get the source on GitHub</a>
       </ul>
