--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ header:
     <section>
       <h2>Connect with LensKit</h2>
       <ul class='highlights'>
-        <li>Join our <a href="#">mailing list</a>
+        <li>Join our <a href="https://wwws.cs.umn.edu/mm-cs/listinfo/lenskit">mailing list</a>
         <li>Report and discuss <a href="https://github.com/grouplens/lenskit/issues">issues on GitHub</a>
         <li><a href="https://twitter.com/intent/user?screen_name=LensKitRS">Follow LensKit on Twitter</a>
       </ul>
@@ -61,7 +61,7 @@ header:
   </div>
   <div class="show-for-large-up large-1 columns">&nbsp;</div>
   <div class="medium-6 large-5 columns twitterbox">
-    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/LensKitRS" data-widget-id="285782633399599104">Tweets by @LensKitRS</a>
+    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/LensKitRS" data-widget-id="285782633399599104">Tweets by &commat;LensKitRS</a>
   </div>
 </div>
 <div class="row">
