--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@ header:
 <div class="row">
   <div class="medium-6 columns use-case">
     <div class="uc-header">
-      <img class='uc-logo' src="/s/building.svg">
-      <h2>Build</h2>
+      <a href="build"><img class='uc-logo' src="/s/building.svg"></a>
+      <h2><a href="build">Build</a></h2>
       <p>Use LensKit to build your next recommender application.
     </div>
   </div>
   <div class="medium-6 columns use-case">
     <div class="uc-header">
-      <img class='uc-logo' src="/s/science.svg">
-      <h2>Research</h2>
+      <a href="research"><img class='uc-logo' src="/s/science.svg"></a>
+      <h2><a href="research">Research</a></h2>
       <p>Use LensKit to research recommender algorithms, evaluation techniques, or user experience.
     </div>
   </div>
