fix lenskit download links

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ header:
     <section>
       <h2>Download LensKit</h2>
       <ul class='highlights'>
-        <li>Latest version: <a href="/releases/lenskit-{{site.data.lenskit.version}}.html">{{site.lenskit.version}}</a>
+        <li>Latest version: <a href="/releases/lenskit-{{site.data.lenskit.version}}.html">{{site.data.lenskit.version}}</a>
         {% if site.data.lenskit.prerelease %}
-        <li>Latest prelease: <a href="/releases/lenskit-{{site.data.lenskit.next}}.html">{{site.lenskit.prerelease}}</a>
+        <li>Latest prelease: <a href="/releases/lenskit-{{site.data.lenskit.next}}.html">{{site.data.lenskit.prerelease}}</a>
         {% endif %}
         <li><a href="http://search.maven.org/#artifactdetails|org.grouplens.lenskit|lenskit-all|2.1-M4|jar">Get from Maven Central</a>
         <li><a href="https://github.com/grouplens/lenskit">Get the source on GitHub</a>
