Link to BinTray from home page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@ header:
 <div class="row">
   <div class="medium-6 columns project-info">
     <section>
-      <h2>Download LensKit</h2>
+      <h2>Get LensKit</h2>
       <ul class='highlights'>
+        <li><a href="https://bintray.com/lenskit/lenskit-releases/lenskit/{{site.data.lenskit.version}}/view">Download latest binaries</a> (<a href="/releases/lenskit-{{site.data.lenskit.version}}.html">version {{site.data.lenskit.version}}</a>)
         <li>Latest version: <a href="/releases/lenskit-{{site.data.lenskit.version}}.html">{{site.data.lenskit.version}}</a>
         {% if site.data.lenskit.prerelease %}
         <li>Latest prelease: <a href="/releases/lenskit-{{site.data.lenskit.next}}.html">{{site.data.lenskit.prerelease}}</a>
