--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 fullTitle: LensKit Recommender Toolkit
 scripts:
 - //platform.twitter.com/widgets.js
+priority: 1
 layout: shell
 header:
   title: hide
