Add redirects for pages still linked in Bing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ priority: 1
 layout: shell
 header:
   title: hide
+redirect_from:
+  - /maven-site/index.html
 ---
 <header class="row">
   <div class="large-12 columns logo">
