fix lenskit link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ redirect_from:
 <div itemscope itemtype="http://schema.org/SoftwareApplication">
 <header class="row">
   <div class="large-12 columns logo">
-    <a href="http://lenskit/" itemprop="url"><img src="/s/logo.png" alt="LensKit" itemprop="image"></a>
+    <a href="//lenskit.org/" itemprop="url"><img src="/s/logo.png" alt="LensKit" itemprop="image"></a>
     <p itemprop="description">Open-Source Tools for Recommender Systems
   </div>
 </header>
