--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ redirect_from:
   - /maven-site/index.html
 ---
 <div itemscope itemtype="http://schema.org/SoftwareApplication" class="pure-g main frontpage">
-<header class="pure-u-1-1">
-  <a href="//lenskit.org/" itemprop="url"><img src="/s/logo.png" alt="LensKit" itemprop="image"></a>
-  <p itemprop="description">Open-Source Tools for Recommender Systems
+<header class="pure-u-1-1 banner logo">
+  <a href="//lenskit.org/" itemprop="url"><img src="/s/logo.png" alt="LensKit" itemprop="image" width=512 height=128></a>
+  <p itemprop="description" class="slogan">Open-Source Tools for Recommender Systems
 </header>
 <div class="use-case pure-u-1-1 pure-u-md-1-2">
   <div class="uc-header">
@@ -63,7 +63,7 @@ redirect_from:
   <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/LensKitRS" data-widget-id="285782633399599104">Tweets by &commat;LensKitRS</a>
 </div>
 <div class="pure-u-1-1 info">
-  <p>LensKit is free and open-source software, available under the terms of the <a href="https://www.gnu.org/licenses/lgpl-2.1.html" itemprop="license">GNU Lesser General Public license version 2.1 or later</a></p>
+  <p>LensKit is free and open-source software, available under the terms of the <a href="https://www.gnu.org/licenses/lgpl-2.1.html" itemprop="license">GNU Lesser General Public license version 2.1 or later</a>.</p>
   <section class="acknowledgements">
     <h2 class="subheader">Acknowledgements</h2>
     {% include thanks.html %}
