Implement better nav menus

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ header:
 redirect_from:
   - /maven-site/index.html
 ---
-<div itemscope itemtype="http://schema.org/SoftwareApplication" class="pure-g main frontpage">
+<main itemscope itemtype="http://schema.org/SoftwareApplication" class="pure-g main shell frontpage">
 <header class="pure-u-1-1 banner logo">
   <a href="//lenskit.org/" itemprop="url"><img src="/s/logo.png" alt="LensKit" itemprop="image" width=512 height=128></a>
   <p itemprop="description" class="slogan">Open-Source Tools for Recommender Systems
@@ -69,4 +69,4 @@ redirect_from:
     {% include thanks.html %}
   </section>
 </div>
-</div>
+</main>
