--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ redirect_from:
 ---
 <main itemscope itemtype="http://schema.org/SoftwareApplication" class="pure-g main shell frontpage">
 <header class="pure-u-1-1 banner logo">
-  <a href="//lenskit.org/" itemprop="url"><img src="/s/logo.png" alt="LensKit" itemprop="image" width=512 height=128></a>
+  <a href="//lenskit.org/" itemprop="url"><img src="/s/logo.png" class="scalable" alt="LensKit" itemprop="image" width=512 height=128></a>
   <p itemprop="description" class="slogan">Open-Source Tools for Recommender Systems
 </header>
 <div class="use-case pure-u-1-1 pure-u-md-1-2">
@@ -58,7 +58,7 @@ redirect_from:
     </ul>
   </section>
 </div>
-<div class="pure-u-lg-1-12">&nbsp;</div>
+<div class="spacer pure-u-lg-1-12">&nbsp;</div>
 <div class="twitterbox pure-u-md-1-2 pure-u-lg-5-12">
   <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/LensKitRS" data-widget-id="285782633399599104">Tweets by &commat;LensKitRS</a>
 </div>
