Update mailing list URL

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ redirect_from:
   <section>
     <h2>Connect with LensKit</h2>
     <ul class='highlights'>
-      <li>Join our <a itemprop="discussionUrl" href="https://wwws.cs.umn.edu/mm-cs/listinfo/lenskit">mailing list</a>
+      <li>Join our <a itemprop="discussionUrl" href="https://groups.google.com/forum/#!forum/lenskit-recsys">mailing list</a>
       <li>Report and discuss <a href="https://github.com/grouplens/lenskit/issues">issues on GitHub</a>
       <li><a href="https://twitter.com/intent/user?screen_name=LensKitRS">Follow LensKit on Twitter</a>
     </ul>
