delete js things & add hsitory link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ redirect_from:
 <header class="pure-u-1-1 banner logo">
   <a href="//lenskit.org/" itemprop="url"><img src="/s/logo.png" class="scalable" alt="LensKit" itemprop="image" width=512 height=128></a>
   <p itemprop="description" class="slogan">Open-Source Tools for Recommender Systems
+  <p style="text-align: center;">LensKit for Java is deprecated; see <a href="https://lenskit.org">LensKit for Python</a></p>
 </header>
 <div class="use-case pure-u-1-1 pure-u-md-1-2">
   <div class="uc-header">
